src/test/deca/syntax/invalid/provided/simple_lex.deca
/*// Description:
//    tests de programme lexicalement correct.
//
// Resultats:
//    Ligne 11 : Erreur de syntaxe.
//    test_lex ne doit pas donner d'erreur.
//
// Historique:
//    cree le 21/04/2023
*/
idf _autre_idf
{
}
(
)
// un commentaire.
